fix overflow style, to ensure the height of log body doesn't span the parent element

--- a/src/app.scss
+++ b/src/app.scss
@@ -88,6 +88,7 @@
 
 .lines {
   flex: 1;
+  overflow: hidden;
 }
 .line {
   display: flex;
