--- a/src/layout.module.scss
+++ b/src/layout.module.scss
@@ -81,6 +81,7 @@ $sideBarBg: #eaeaea;
   display: flex;
   background: #fff;
   flex: 1;
+  overflow: hidden;
 }
 
 .colResizer {
